--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "gulp-concat": "^2.6.1",
     "gulp-ttftowoff2": "^1.0.1",
-    "gulp-uglify-es": "^3.0.0"
+    "gulp-uglify-es": "^3.0.0",
+    "swiper": "^8.0.7"
   }
 }
